Fixed: tag input alignment and height

--- a/frontend/src/Components/Form/TagInput.css
+++ b/frontend/src/Components/Form/TagInput.css
@@ -8,13 +8,13 @@
   &.isFocused {
     outline: 0;
     border-color: $inputFocusBorderColor;
-    box-shadow: inset 0 1px 1px $inputBoxShadowColor, 0 0 8px $inputFocusBoxShadowColor;
+    box-shadow: inset 0 1px 1px $inputBoxShadowColor,
+      0 0 8px $inputFocusBoxShadowColor;
   }
 }
 
 .internalInput {
   flex: 1 1 0%;
-  margin-top: -6px;
   margin-left: 3px;
   min-width: 20%;
   max-width: 100%;
